Bug 176407 - [puc] SIIG Cyber S2P1 has speed problems with puc driver
Summary: [puc] SIIG Cyber S2P1 has speed problems with puc driver
Status: Closed FIXED
Alias: None
Product: Base System
Classification: Unclassified
Component: kern (show other bugs)
Version: Unspecified
Hardware: Any Any
: Normal Affects Only Me
Assignee: freebsd-bugs (Nobody)
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-02-25 03:20 UTC by Greg Putrich
Modified: 2019-01-20 03:41 UTC (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Greg Putrich 2013-02-25 03:20:00 UTC
This is similar to kern/152034, except this is a different model card.  This model of SIIG card also has the 10x clock crystal on it. 


Output from devinfo -v
          pci3
            puc0 pnpinfo vendor=0x1415 device=0x950a subvendor=0x131f subdevice=0x2061 class=0x070006 at slot=0 function=0
              uart2 pnpinfo type=1 at port=1
              uart3 pnpinfo type=1 at port=2
              uart4 pnpinfo type=1 at port=3
              uart5 pnpinfo type=1 at port=4
            ppc1 pnpinfo vendor=0x1415 device=0x9513 subvendor=0x131f subdevice=0x2090 class=0x070101 at slot=0 function=1
              ppbus0
                plip0
                lpt0
                ppi0


Output from pciconf -lv

puc0@pci0:3:0:0:	class=0x070006 card=0x2061131f chip=0x950a1415 rev=0x00 hdr=0x00
    vendor     = 'Oxford Semiconductor Ltd'
    device     = 'EXSYS EX-41092 Dual 16950 Serial adapter'
    class      = simple comms
    subclass   = UART
ppc1@pci0:3:0:1:	class=0x070101 card=0x2090131f chip=0x95131415 rev=0x00 hdr=0x00
    vendor     = 'Oxford Semiconductor Ltd'
    device     = 'OX16PCI954 (Quad 16950 UART) function 1 (parallel port)'
    class      = simple comms
    subclass   = parallel port

Fix: 

See kern/152034. It should be the same, but instead for this model of device which should be at line 421 in pucdata.c in 9.1-RELEASE.
How-To-Repeat: Can only talk to the modem at 1200 bps. The modem once said that it connected at 12000 to the FreeBSD machine.  The modem works fine at 300-115200 bps on another machine with a different type of serial port.
Comment 1 commit-hook freebsd_committer freebsd_triage 2015-12-28 20:25:05 UTC
A commit references this bug:

Author: marius
Date: Mon Dec 28 20:24:08 UTC 2015
New revision: 292840
URL: https://svnweb.freebsd.org/changeset/base/292840

Log:
  - Add an entry for the SIIG Cyber 2SP1 PCIe adapter, which is based
    on an Oxford Semiconductor OX16PCI954 but uses only two ports and
    a non-default clock rate.
  - Fix style/whitespace

  PR:		176407
  MFC after:	3 days

Changes:
  head/sys/dev/puc/pucdata.c
Comment 2 commit-hook freebsd_committer freebsd_triage 2016-01-27 22:50:21 UTC
A commit references this bug:

Author: marius
Date: Wed Jan 27 22:50:05 UTC 2016
New revision: 294961
URL: https://svnweb.freebsd.org/changeset/base/294961

Log:
  - Add an entry for the SIIG Cyber 2SP1 PCIe adapter, which is based
    on an Oxford Semiconductor OX16PCI954 but uses only two ports and
    a non-default clock rate. [1]
  - Add entries for the more prominent members of the Digi International
    Neo series, which are based on Exar PCI chips.
    Tested by: Patrick Powell
  - Mark some unused parameters as such.
  - Fix style/whitespace

  PR:		176407 [1]

Changes:
_U  stable/10/
  stable/10/sys/dev/puc/pucdata.c
Comment 3 Eitan Adler freebsd_committer freebsd_triage 2018-05-20 23:52:01 UTC
For bugs matching the following conditions:
- Status == In Progress
- Assignee == "bugs@FreeBSD.org"
- Last Modified Year <= 2017

Do
- Set Status to "Open"
Comment 4 Oleksandr Tymoshenko freebsd_committer freebsd_triage 2019-01-20 03:41:09 UTC
There was a commit referencing this bug, but it's still not closed and has been inactive for some time. Closing as fixed. Please re-open it if the issue hasn't been completely resolved.