- Add an entry for the SIIG Cyber 2SP1 PCIe adapter, which is based   on an Oxford Semiconductor OX16PCI954 but uses only two ports and   a non-default clock rate. - Fix style/whitespace

PR:		176407
MFC after:	3 days